# fastapi

./: Dockerfile  docker-compose.yaml  pyproject.toml
api/: main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/tests/: test_mail.py
