[tool.poetry]
name = "demo-app"
version = "1.0.0"
description = ""
authors = ["Shusaku Yosa <shusaku.yosa@zozo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = "^1.4.27"
aiomysql = "^0.0.22"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.16.0"
aiosqlite = "^0.17.0"
httpx = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
